--- a/Dashboard/src/main/resources/templates/tracer/link.html
+++ b/Dashboard/src/main/resources/templates/tracer/link.html
@@ -23,7 +23,7 @@
     var tracerid = [[${id}]];
     var createTime = [[${createTime}]];
 
-    var prefix = ctx + "tracer/cart";
+    var prefix = ctx + "tracer/index";
 
     $(function() {
         var options = {
