feat:记录接口异常信息；refactor:重构传输对象(map->obj)

--- a/Dashboard/src/main/resources/templates/tracer/index.html
+++ b/Dashboard/src/main/resources/templates/tracer/index.html
@@ -193,7 +193,10 @@
                 },
                 {
                     field: 'errmsg',
-                    title: '错误信息'
+                    title: '错误信息',
+                    formatter: function(value, row, index) {
+                        return $.table.tooltip(value, 100, "open");
+                    }
                 },
                 {
                     field: 'createTime',
